<resources>
    <string name="app_name">掌上影院</string>
    <string name="share">分享</string>
    <string name="fuli">福利</string>
    <string name="setting">设置</string>
    <string name="feedback">建议反馈</string>
    <string name="collection">我的收藏</string>
    <string name="download">我的下载</string>
    <string name="about">关于我们</string>
    <string name="close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
