<com.exercise.handmovie.widget.ResideLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resideLayout"
    style="@style/container_style">

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/top_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/protrait"
                app:border_color="@color/primary_light"
                app:border_width="2dp"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="10dp"
                android:text="掌上影院 , 我的影院"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_menu"
            android:layout_below="@+id/top_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_collect"
                    style="@style/MenuStyle"
                    android:text="@string/collection" />

                <TextView
                    android:id="@+id/tv_mydown"
                    style="@style/MenuStyle"
                    android:text="@string/download" />

                <TextView
                    android:id="@+id/tv_fuli"
                    style="@style/MenuStyle"
                    android:text="@string/fuli" />

                <TextView
                    android:id="@+id/tv_share"
                    style="@style/MenuStyle"
                    android:text="@string/share" />

                <TextView
                    android:id="@+id/tv_feedback"
                    style="@style/MenuStyle"
                    android:text="@string/feedback" />

                <TextView
                    android:id="@+id/tv_setting"
                    style="@style/MenuStyle"
                    android:text="@string/setting" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:padding="12dp"
                android:text="关于"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:padding="12dp"
                android:text="主题"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        style="@style/both_match_style"
        >
        <com.exercise.handmovie.widget.UnScrollViewPager
            android:id="@+id/vp_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingBottom="40dp" />

        <RadioGroup
            android:id="@+id/tab_rg_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bottom_bg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab_rb_1"
                style="@style/tab_rb_style"
                android:checked="true"
                android:drawableTop="@drawable/tab_02"
                android:text="精选" />

            <RadioButton
                android:id="@+id/tab_rb_2"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_03"
                android:text="专题"/>

            <RadioButton
                android:id="@+id/tab_rb_3"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_01"
                android:text="发现"/>

            <RadioButton
                android:id="@+id/tab_rb_4"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_04"
                android:text="我的"/>

        </RadioGroup>
    </RelativeLayout>

</com.exercise.handmovie.widget.ResideLayout>